environments/ansible/resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
namespace: ingress
metadata:
  name: nginx-ingress
  namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-ingress
  namespace: ingress
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linked-data-repository-service
            port:
              number: 3200
